<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/cart"
        android:title="@string/cart"
        android:icon="@drawable/ic_shopping_cart"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/account"
        android:title="@string/account"
        android:icon="@drawable/ic_person"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/orders"
        android:title="@string/my_orders"
        android:icon="@drawable/ic_orders"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_logout"
        app:showAsAction="ifRoom" />

</menu>