<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ProfileActivity">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/white">

        <TextView
            android:id="@+id/nameProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:ems="12"
            android:textSize="22sp"
            android:text="@string/name" />

        <TextView
            android:id="@+id/emailProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:ems="12"
            android:textSize="22sp"
            android:text="@string/email" />

        <TextView
            android:id="@+id/phoneProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:ems="12"
            android:textSize="22sp"
            android:text="@string/phonenumber" />

        <TextView
            android:id="@+id/addressProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:ems="12"
            android:textSize="22sp"
            android:text="@string/address" />

        <Button
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="10dp"
            android:background="@color/colorAccent"
            android:textColor="@color/colorAccentText"
            android:textAllCaps="false"
            android:text="@string/change_password"
            android:textSize="18sp"
            android:onClick="onChangePassword" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="10dp"
            android:background="@color/colorAccent"
            android:textColor="@color/colorAccentText"
            android:textAllCaps="false"
            android:text="@string/my_orders"
            android:textSize="18sp"
            android:onClick="onMyOrders" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>