<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.AddressActivity">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomPanelAddress"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/white">

        <EditText
            android:id="@+id/addressLine1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:ems="12"
            android:textSize="22sp"
            android:inputType="textPostalAddress"
            android:hint="@string/address_line_1"
            android:autofillHints="@string/address_line_1" />

        <EditText
            android:id="@+id/addressLine2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:ems="12"
            android:textSize="22sp"
            android:inputType="textPostalAddress"
            android:hint="@string/address_line_2"
            android:autofillHints="@string/address_line_2" />

        <EditText
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:ems="12"
            android:textSize="22sp"
            android:inputType="textPostalAddress"
            android:hint="@string/city"
            android:autofillHints="@string/city" />

        <EditText
            android:id="@+id/state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:ems="12"
            android:textSize="22sp"
            android:inputType="textPostalAddress"
            android:hint="@string/state"
            android:autofillHints="@string/state" />

        <EditText
            android:id="@+id/pincode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:ems="12"
            android:textSize="22sp"
            android:inputType="number"
            android:hint="@string/pincode"
            android:autofillHints="@string/pincode" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomPanelAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/white">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="10dp"
            android:background="@color/colorAccent"
            android:textColor="@color/colorAccentText"
            android:textAllCaps="false"
            android:text="@string/cancel"
            android:textSize="18sp"
            android:onClick="onCancel"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="10dp"
            android:background="@color/colorAccent"
            android:textColor="@color/colorAccentText"
            android:textAllCaps="false"
            android:text="@string/next"
            android:textSize="18sp"
            android:onClick="onNext"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>