<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/card_background"
    tools:context=".ui.activity.OrderDetailsActivity">

    <ScrollView
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomPanelCart"
        android:scrollbars="vertical">
        <LinearLayout
            android:id="@+id/productsViewListOrderDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentPadding="10dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp"
                android:layout_marginBottom="15dp"
                app:cardBackgroundColor="@color/white">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageView
                        android:src="@color/colorAccent"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/productphoto"/>

                    <TextView
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Product"
                        android:textSize="26sp"/>

                    <TextView
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quant"
                        android:textSize="26sp"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentPadding="10dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp"
                android:layout_marginBottom="15dp"
                app:cardBackgroundColor="@color/white">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageView
                        android:src="@color/colorAccent"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/productphoto"/>

                    <TextView
                        android:layout_marginStart="20dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Product"
                        android:textSize="26sp"/>

                    <TextView
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quant"
                        android:textSize="26sp"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>



    <LinearLayout
        android:id="@+id/bottomPanelCart"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">

        <TextView
            android:id="@+id/priceOrderDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/total_price"
            android:textSize="26sp"/>

        <TextView
            android:id="@+id/addressOrderDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/address"
            android:textSize="26sp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>